Frontend/style/reportStyle.css
.nav1{
    position: absolute;
    top: 34%;
    right: 4%;
    display: flex;
    flex-wrap: wrap;
    gap: 15px;
    transform: translate(-11%, -50%);
}
h1{
    color: white;
}

.nav1 a{
    text-decoration: none;
    margin: 5px;
    font-size: large;
    color: black;
    font-weight: bolder;
}
.headerimg{
    position: absolute;
    image-rendering: pixelated;
    height: 50px;
    max-width: 100%;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.mid{
    padding-top: 45px;
    padding-bottom: 5px;
    text-wrap: inherit;
    font-size: 50px;
}
.mid h1{
    text-align: center;
    font-size: 50px;
}
.info {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: center;
    margin-top: 10px;
}

.return{
    text-align: center;
}
.return a{
    font-size: 2rem;
    text-decoration: none;
    color: white;
}

.itemBox {
    text-decoration: none;
    width: 384px;
    height: 384px;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
    display: inline-block;
    text-decoration: none;
    color: black;
}

.content {
    image-rendering: pixelated;
    background-image: url("/Frontend/images/loginimg.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    
    align-items: center;
    justify-content: center;

    width: 100%;
    height: 100%;
    padding: 25px;
    font-size: 20px;
    display: flex;
    flex-direction: column;
    text-align: center;

}
.content h1 {
    margin: 0;
    font-size: 40px;
    color: #353333;
}

.content p {
    font-size: 45px;
    color: #424141;
    text-align: center;
}
.content ul{
    font-size: 15px;
    color: #424141; 
    list-style-position: inside;
}

